Connect and save client

--- a/client_code/Makefile
+++ b/client_code/Makefile
@@ -2,7 +2,7 @@ SHELL = /bin/bash
 CC = g++
 CFLAGS = -std=c++14 -c
 
-make_client: main.o init.o ../Header.h
+make_client: main.o init.o helpers.o ../Header.h
 
 %.o: %.cpp ../Header.h
 	$(CC) $(CFLAGS) -o $@ $<
