--- a/server_code/Makefile
+++ b/server_code/Makefile
@@ -3,7 +3,7 @@ CC = g++
 CFLAGS = -std=c++14 -c
 DEP = server.h ../Header.h
 
-make_server: main.o init.o helpers.o $(DEP)
+make_server: main.o init.o helpers.o handlers.o $(DEP)
 
 %.o: %.cpp $(DEP)
 	$(CC) $(CFLAGS) -o $@ $<
