Add base for user requests

--- a/server_code/Makefile
+++ b/server_code/Makefile
@@ -2,11 +2,11 @@ SHELL = /bin/bash
 CC = g++
 CFLAGS = -std=c++14 -c
 DEP = server.h ../Header.h
-
-make_server: main.o init.o helpers.o handlers.o $(DEP)
+OBJ = main.o modules/login.o modules/logout.o modules/signup.o init.o helpers.o handlers.o
+make_server: $(OBJ) $(DEP)
 
 %.o: %.cpp $(DEP)
 	$(CC) $(CFLAGS) -o $@ $<
 
 clean:
-	rm *.o *.out
+	rm $(OBJ)
