--- a/server_code/Makefile
+++ b/server_code/Makefile
@@ -2,7 +2,7 @@ SHELL = /bin/bash
 CC = g++
 CFLAGS = -std=c++14 -c
 DEP = server.h ../Header.h
-OBJ = main.o modules/login.o modules/logout.o modules/signup.o init.o helpers.o handlers.o
+OBJ = main.o modules/login.o modules/logout.o modules/signup.o modules/command.o init.o helpers.o handlers.o
 make_server: $(OBJ) $(DEP)
 
 %.o: %.cpp $(DEP)
